# OffScreenRender

./: .gitignore  CMakeLists.txt  CP.md  README.md
back/: CMakeLists_back.txt
shaders/: scene.frag
src/: Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ScreenRenderer.cpp  ScreenRenderer.h  Shader.h  Worker.cpp  Worker.h  main.cpp
